# eelgrass-cp

./: README.md  pyproject.toml  requirements.txt
docs/: paths_and_data.md
scripts/ablation/: sensitivity_analysis.py
scripts/conformal/: calibrate_pixel_cp_2021.py  eval_2022_compare_lambdas.py  eval_2022_points.py  nonparametric_eval_2022.py  nonparametric_scale_vis.py
scripts/inference/: deep_ensemble_point_inference.py
scripts/spatial/: spatial_blocks_morton.py
scripts/viz/: raster_viz.py  raster_viz_single_chip.py  raster_viz_transition.py  spatial_uncertainty_triptych.py
src/eelgrass_cp/: __init__.py  calibration.py  cp.py  metrics.py  modeling.py  raster.py  spatial.py
